--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,14 +2,15 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    margin-bottom: .2rem;
+
 }
 .footer-item {
     color: #FDFDFB;
     font-family: "Share Tech Mono";
     text-shadow: 3px 3px 3px black;
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-align: right;
     margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 25px;
+    margin-right: .6rem;
 }
