--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -1,10 +1,28 @@
+.MainContent {
+    overflow: hidden;
+}
 video {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     z-index: -100;
-    object-fit: fill;
+    overflow: hidden;
+}
+
+.vignette {
+    position: fixed;
+    background-image: url("../assets/vignette.png");
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -50;
+    background-size: cover;
 }
