--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,19 +7,21 @@
     margin-top: .2rem;
     margin-bottom: 0;
     margin-left: .6rem;
-
-
-    color: #FFFF82;
+    color: #dbc268;
     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #0E0E52, 0 -10px 20px #0E0E52, 0 -18px 40px #0E0E52;
     text-shadow: 3px 3px 3px black;
+    user-select: none;
+
 
 }
 .subtitle {
     font-size: .9rem;
     font-family: "Share Tech Mono";
-    color: #FDFDFB;
+    color: #48a7bd;
     text-shadow: 3px 3px 3px black;
     text-align: left;
     margin-top: 0;
     margin-left: .6rem;
+    user-select: none;
+
 }
