--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,7 @@ code {
   font-family: 'Share Tech Mono';
   src: local('Share Tech Mono'), url(./fonts/ShareTechMono-Regular.ttf) format('truetype');
 }
+@font-face {
+	font-family: 'Inconsolata';
+	src: local('Inconsolata'), url(./fonts/Inconsolata-Regular.ttf) format('truetype');
+  }
