Add GitHub button Remove Creator Page Add links and info to SSCAIT and JBWAPI

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,7 +17,7 @@
 .subtitle {
     font-size: .9rem;
     font-family: "Share Tech Mono";
-    color: #48a7bd;
+    color: #CCDDE2;
     text-shadow: 3px 3px 3px black;
     text-align: left;
     margin-top: 0;
