--- a/src/components/AboutPage.css
+++ b/src/components/AboutPage.css
@@ -3,13 +3,21 @@
     outline: none;
     width: 400px;
     height: auto;
-    box-shadow: 3px 5px 1px black;
+    /* box-shadow: 3px 5px 1px black; */
     z-index: 10;
 }
 
+.video-caption {
+    color: #CCDDE2;
+    font-style: italic;
+    font-family: "Inconsolata";
+
+}
+
 .about-page {
-    background-color:#262320;
-    height: 100vh;
+    background-color:#05081B;
+    height:100%;
+    z-index: -10000;
 }
 .about-title {
     font-family: "Inconsolata";
@@ -17,6 +25,7 @@
     padding-top: 1.5rem;
     color: #AE8641;
     text-shadow: 1px 1px 1px black;
+    z-index: 5;
 
 }
 
@@ -32,12 +41,40 @@
     font-family: "Inconsolata";
     text-align: justify;
     color: #CCDDE2;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .about-hr {
     border-color: #CCDDE2;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+}
+
+.about-main-container {
+    position: relative;
+    padding-bottom: 100px;
+    z-index: 150;
+}
+
+.about-links {
+    display: block;
+    color: goldenrod;
+}
+
+.about-github-button {
+    background-color: transparent;
+    color: goldenrod;
+    padding-top: none;
+    /* border: none; */
+    border-radius: 50%;
+    font-size: 5rem;
+}
+
+.about-github-icon {
+    margin-top: 20px;
+}
+
+.about-link-icon {
+    font-size: 1rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -47,8 +84,8 @@
 
     }
     .about-video {
-        margin-left: 5px;
-        margin-right: 25px;
+        width: 375px;
+        
     }
 
     .about-title {
@@ -56,14 +93,69 @@
     }
 
     .about-content{
+        font-size: 1.1rem;
         margin-left: 20px;
         margin-right: 20px;
     }
 }
 
+@media screen and (min-width: 600px) {
+    .about-video {
+        width: 90%;
+    }
+
+    .about-main-container {
+        margin: auto;
+        width: 70%;
+    }
+
+    .about-content {
+        font-size: 1.5rem;
+        width: 82%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 @media screen and (min-width: 1000px) {
     .about-video {
+        width: 90%;
+    }
+
+    .about-main-container {
+        margin: auto;
         width: 70%;
+    }
+
+    .about-content {
+        font-size: 1.5rem;
+        width: 82%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 1350px) {
+    .about-video {
+        width: 75%;
+    }
+
+    .about-main-container {
+        margin: auto;
+        width: 55%;
+    }
+
+    .about-content {
+        font-size: 1.5rem;
+        width: 82%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 1650px) {
+    .about-video {
+        width: 75%;
     }
 
     .about-main-container {
