--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,7 @@
 
 }
 .footer-item {
-    color: #F2E5D7;
+    color: #CCDDE2;
     font-family: "Share Tech Mono";
     text-shadow: 3px 3px 3px black;
     font-size: 2.5rem;
