--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@ table {
 	border-spacing: 0;
 }
 
+a {
+	text-decoration: none;
+}
 
 
 
@@ -51,8 +54,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #05081B;
 }
 
 
